# dilbert-viewer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Procfile  README.md  REUSE.toml  cache_init.sql
.github/workflows/: tests.yml
.reuse/: dep5
LICENSES/: LicenseRef-Archive.org.txt  LicenseRef-Dilbert.com.txt
src/: app.rs  client.rs  constants.rs  datetime.rs  db.rs  errors.rs  handlers.rs  lib.rs  logging.rs  main.rs  scraper.rs  templates.rs  utils.rs
src/entities/: comic_cache.rs  latest_date.rs  mod.rs  prelude.rs
src/scrapers/: comics.rs  latest.rs  mod.rs  scraper.rs
static/: robots.txt  script.js  styles.css
templates/: base.html  comic.html  error.html  not_found.html
testdata/html/: comic.html  empty.html  minimized.html  simple.html
testdata/scraping/: 2000-01-01.html  2020-01-01.html
tests/: test_handlers.rs
