[package]
name = "dilbert-viewer"
version = "0.3.0"
edition = "2021"
description = "Simple viewer webpage for Dilbert by Scott Adams"
readme = "README.md"
repository = "https://github.com/rharish101/dilbert-viewer"
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
askama = "0.11.0"
async-trait = "0.1.52"
awc = { version = "3.0.1", features = ["rustls"] }
chrono = { version = "0.4.19", features = ["serde"] }
deadpool-redis = "0.11.0"
futures = "0.3.19"
html-escape = "0.2.9"
log = "0.4.14"
minifier = "0.2.2"
minify-html = { version = "0.10.2", package = "minify-html-onepass" }
mockall_double = "0.3.0"
portpicker = "0.1.1"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
redis = { version = "0.22.1", features = ["json", "tokio-native-tls-comp"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.34"
tl = "0.7.7"
tokio = { version = "1.15.0", features = ["fs"] }

[profile.release]
lto = true

[dev-dependencies]
content-security-policy = "0.4.2"
deadpool = "0.9.5"
faketime = "0.2.1"
mockall = "0.11.3"
redis-test = { version = "0.1.1", features = ["aio"] }
tempfile = "3.3.0"
test-case = "2.2.2"
wiremock = "0.5.15"
