# SPDX-FileCopyrightText: 2022 Harish Rajagopal <harish.rajagopals@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "dilbert-viewer"
version = "0.3.0"
edition = "2021"
description = "Simple viewer webpage for Dilbert by Scott Adams"
readme = "README.md"
repository = "https://github.com/rharish101/dilbert-viewer"
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.10"
actix-web = "4.9.0"
askama = "0.12.0"
async-trait = "0.1.52"
awc = { version = "3.4.0", features = ["rustls-0_21"] }
chrono = { version = "0.4.19", features = ["serde", "std"], default-features = false }
deadpool-redis = "0.18.0"
futures = "0.3.19"
html-escape = "0.2.9"
minifier = "0.3.2"
minify-html = { version = "0.15.0", package = "minify-html-onepass" }
mockall_double = "0.3.0"
pin-project = "1.0.12"
portpicker = "0.1.1"
rand = "0.8.4"
redis = { version = "0.27.6", features = ["json", "tls-rustls-insecure", "tokio-rustls-comp"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "2.0.9"
tl = "0.7.7"
tokio = { version = "1.43.1", features = ["fs"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }

[profile.release]
lto = true

[dev-dependencies]
content-security-policy = "0.5.1"
deadpool = "0.12.1"
mockall = "0.13.1"
redis-test = { version = "0.6.0", features = ["aio"] }
test-case = "3.2.1"
wiremock = "0.6.2"
